--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ mccabe==0.6.1
 psycopg2==2.8.6
 pycodestyle==2.6.0
 pyflakes==2.2.0
+python-decouple==3.4
 pytz==2021.1
 sqlparse==0.4.1
 toml==0.10.2
